src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_details_ui__artist_details_ui_tests__tests__snapshot_tests__artist_details_UpdateAndScanArtistPrompt_1.snap
---
source: src/ui/lidarr_ui/library/artist_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artistShe was born in Madison, Wisconsin: a city she has never really left.Her first album took her  │        
        │seven years to finish.                                                                                                                             │        
        │Disambiguation: American pianist                                                                                                                   │        
        │Type: Person                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: soundtrack                                                                                                                                 │        
        │Rating: 84%                                                                                                                                        │        
        │Path: /nfs/music/test-artist                                                                                                                       │        
        │Quality Profile: Lossless                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Albums: 1                                 ╭────────────────────  Update and Scan  ────────────────────╮                                            │        
        │Tracks: 12/15                             │  Do you want to trigger an update and disk scan for the   │                                            │        
        │╭  Artist Details  ───────────────────────│                       artist: Alex?                       │───────────────────────────────────────────╮│        
        ││ Albums │ History │ Manual Search        │                                                           │                                           ││        
        ││─────────────────────────────────────────│                                                           │───────────────────────────────────────────││        
        ││   Source Title ▼                        │                                                           │        Date                               ││        
        ││=> Test source title                     │                                                           │        2023-01-01 00:00:00 UTC            ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │╭────────────────────────────╮╭───────────────────────────╮│                                           ││        
        ││                                         ││             Yes            ││            No             ││                                           ││        
        ││                                         │╰────────────────────────────╯╰───────────────────────────╯│                                           ││        
        ││                                         ╰───────────────────────────────────────────────────────────╯                                           ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
